# dice-service

./: LICENSE  README.md  dice.cabal
src/: Args.hs  DiceRoll.hs  Main.hs  Views.hs
static/css/: style.css
