name:                dice
version:             0.1.0.0
-- synopsis:
-- description:
license:             GPL-3
license-file:        LICENSE
author:              John Olsson <john@cryon.se>
maintainer:          John Olsson <john@cryon.se>
-- copyright:
category:            Service
build-type:          Simple
cabal-version:       >=1.8

executable dice
  main-is:             Main.hs
  hs-source-dirs:      src
  build-depends:       base                  == 4.6.*,
                       parsec                == 3.1.*,
                       random                == 1.*,
                       scotty                == 0.7.*,
                       text                  == 0.11.*,
                       mtl                   == 2.1.*,
                       blaze-html            == 0.6.*,
                       numerals              == 0.4.*,
                       --numerals-base         == 0.4.*,
                       http-media            == 0.1.*,
                       bytestring            == 0.10.*,
                       http-types            == 0.8.*,
                       aeson                 == 0.6.*,
                       wai-extra             == 2.1.*,
                       wai-middleware-static == 0.5.*,
                       optparse-applicative  == 0.8.*,
                       data-default          == 0.5.*